--- a/gsoc-17.html
+++ b/gsoc-17.html
@@ -157,7 +157,7 @@
                     <li>The world's first <a href="https://github.com/wolfbeacon/wolfbeacon-server" target="_blank">API</a> that lists out all the world's Hackathons around you, sorted by distance(default) when you you simply enter your coordinates. </li>
                     <li>Mobile first. You can check our Hackathons, learn more, apply, receive updates and much more without any hassles. No more missing out on deadlines application dates.</li>
                     <li>With WolfBeacon sponsored Hackathons, the process of organizing a Hackathon becomes super simple. Simply create your Hackathon and let us take care of registrations, organizations and streamlining the process.</li>
-                    <li>Our Apps cater to all your needs and have all the tools you need as a Hackathon participant and a organiser. Whether you need help at a WolfBeacon sponsored Hackathon venue (support tickets) or need to send updates to all the folks (notifications), we have you covered at every step.</li>
+                    <li>Our Apps cater to all your needs and have all the tools you need as a Hackathon participant and an organiser. Whether you need help at a WolfBeacon sponsored Hackathon venue (support tickets) or need to send updates to all the folks (notifications), we have you covered at every step.</li>
                 </ul>
             </div>
             <br>
@@ -170,19 +170,19 @@
             <p>Interested in WolfBeacon? Awesome! We're always on the lookout for passionate students, developers, Hackathon Experts and Open-Source Ninjas. A few basic qualities we are looking for in potential GSoC students are:</p>
             <div class="container">
                 <ul style=" list-style-type: disc;">
-                    <li>Passionate about about our cause, e.i Hackathons, Hacking, FOSS and Community!</li>
+                    <li>Passionate about our cause, that is Hackathons, Hacking, FOSS and Community!</li>
                     <li>Take the time to <em>be detailed</em> and never leave any pixel untouched.</li>
-                    <li>Be <em>self motivated</em> and take responsibility your own work.</li>
+                    <li>Be <em>self motivated</em> and take responsibility of your own work.</li>
                     <li>Have <em>strong communication skills</em> and <em>good work ethic</em>.</li>
                     <li>Assuming you're a developer, we implicitly assume you have a command over basic tools like Git (squashed commits?), know how to collaborate with a team, issue pull requests and so on.</li>
                 </ul>
             </div>
             <br>
-            <p>We're not looking for any sort of <em>contract developers</em> or folks who are in it for the short run. We're looking for long term developers who are as excited as we are about WolfBeacon. The GSoC project is only going to be a small part of your journey with us so we'd like you to keep that in mind before you submit a proposal. What's in it for you? We have our own set of exclusive <b>perks</b>.</p>
+            <p>We're not looking for any sort of <em>contract developers</em> or folks who are in it for the short run. We're looking for long term developers who are as excited as we are about WolfBeacon. The GSoC project is only going to be a small part of our journey so we'd like you to keep that in mind before you submit a proposal. What's in it for you? We have our own set of exclusive <b>perks</b>.</p>
             <br>
             <div class="container">
                 <ul style=" list-style-type: disc;">
-                    <li>We have a <em>enviable</em> set of sponsors. They've been gracious enough to offer us their otherwise paid services so we've got access to bleeding edge technologies like powerful bare-metal infrastructure for hosting by <a href="https://cycle.io">Cycle.io</a>, state of the art authentication infrastructure by <a href="https://auth0.com">Auth0</a> and loads more!</li>
+                    <li>We have an <em>enviable</em> set of sponsors. They've been gracious enough to offer us their otherwise paid services so we've got access to bleeding edge technologies like powerful bare-metal infrastructure for hosting by <a href="https://cycle.io">Cycle.io</a>, state of the art authentication infrastructure by <a href="https://auth0.com">Auth0</a> and loads more!</li>
                     <li>Sponsored Opportunities to attend the best Hackathons across the planet.</li>
                     <li>AWS credits, Free domains, Stickers and all the good stuff.</li>
                     <li>Excellent networking opportunities with our talented community and team members. We've got folks who are experienced open source developers, ex-GSoCers and work or have interned at enviable places.</li>
@@ -202,7 +202,7 @@
                 </ol>
             </div>
             <br>
-            <p>We'd prefer you <em>not</em> private message the mentors. We're an Open Source community and believe in transparency. You can always contact the admin for any specific queries (see <a href="#contact">contact</a>).</p>
+            <p>We'd prefer you <em>not</em> private message the mentors. Instead, we encourage you to use the  Disqus section to communicate and share ideas with us. We're an Open Source community and believe in transparency. You can always contact the admin for any specific queries (see <a href="#contact">contact</a>).</p>
             <br>
             <br>
             <hr>
