--- a/gsoc-17.html
+++ b/gsoc-17.html
@@ -174,7 +174,7 @@
                     <li>Take the time to <em>be detailed</em> and never leave any pixel untouched.</li>
                     <li>Be <em>self motivated</em> and take responsibility of your own work.</li>
                     <li>Have <em>strong communication skills</em> and <em>good work ethic</em>.</li>
-                    <li>Assuming you're a developer, we implicitly assume you have a command over basic tools like Git (squashed commits?), know how to collaborate with a team, issue pull requests and so on.</li>
+                    <li>Assuming you're a developer, we implicitly assume you have a command over basic tools like Git (gotta love those squashed commits) , know how to collaborate with a team, issue pull requests and so on.</li>
                 </ul>
             </div>
             <br>
@@ -202,7 +202,7 @@
                 </ol>
             </div>
             <br>
-            <p>We'd prefer you <em>not</em> private message the mentors. Instead, we encourage you to use the  Disqus section to communicate and share ideas with us. We're an Open Source community and believe in transparency. You can always contact the admin for any specific queries (see <a href="#contact">contact</a>).</p>
+            <p>We'd prefer you <em>not</em> private message the mentors and use the Disqus section to communicate and share ideas with us instead. We're an Open Source community and believe in transparency. You can always contact the admin for any specific queries (see <a href="#contact">contact</a>).</p>
             <br>
             <br>
             <hr>
@@ -235,7 +235,7 @@
             <br>
             <h2 id="contact"><u>Contact</u></h2>
             <br>
-            <p>As far as general questions and GSoC specifics go, we'd like to have your ideas and proposal links on our Disqus section just like we mentioned earlier. This would help aggregate the ideas and keep a log of FAQs.</p>
+            <p>As far as general questions and GSoC specifics go, we'd like to have them on our Disqus section just like we mentioned earlier. This would help aggregate the ideas and keep a log of FAQs.</p>
             <p>Feel free to join the <code><b>#wolfbeacon</b></code> IRC channel on <a href="https://webchat.freenode.net">irc.freenode.net</a> to exchange ideas with members and other potential students. We use Slack internally but our IRC and Slack channels are synced via <a href="https://github.com/bholagabbar/irackbot" target="_blank">irackbot</a> so all communication between is are two-way, realtime and public.
             </p>
             <p>If you have any other suggestions/questions/specific queries, shoot us a mail at <a href="mailto:hello@wolfbeacon.com">hello@wolfbeacon.com</a> and we'll be happy to get in touch.</p>
