--- a/gsoc-17.html
+++ b/gsoc-17.html
@@ -178,7 +178,7 @@
                 </ul>
             </div>
             <br>
-            <p>We're not looking for any sort of <em>contract developers</em> or folks who are in it for the short run. We're looking for long term developers who are as excited as we are about WolfBeacon. The GSoC project is only going to be a small part of our journey so we'd like you to keep that in mind before you submit a proposal. What's in it for you? We have our own set of exclusive <b>perks</b>.</p>
+            <p>We're not looking for any sort of <em>contract developers</em> or folks who are in it for the short run. We're looking for long term developers who are as excited as we are about WolfBeacon. The GSoC project is only going to be a part of our journey together so we'd like you to keep that in mind before you submit a proposal. What's in it for you? We have our own set of exclusive <b>perks</b>.</p>
             <br>
             <div class="container">
                 <ul style=" list-style-type: disc;">
@@ -198,7 +198,7 @@
                     <li>1. Introduce yourself  and present a short abstract of your ideas for the project in the <a href="#disqus_thread">Disqus section</a> at the bottom of this page</li>
                     <li>2. Feel free to join the <i>#wolfbeacon </i> freenode IRC channel where you can discuss ideas with mentors, community members and other folks.</li>
                     <li>3. Start formalising the requirements, get specific and spec out a great proposal on <a href="https://docs.google.com/document/u/0/?usp=mkt_docs" target="_blank">Google Docs</a>.</li>
-                    <li>4. Paste a shared link to your proposal in the Disqus section with comments enabled you can receive feedback from others. </li>
+                    <li>4. Paste a shared link to your proposal in the Disqus section with comments enabled so you can receive feedback. </li>
                 </ol>
             </div>
             <br>
@@ -236,7 +236,7 @@
             <h2 id="contact"><u>Contact</u></h2>
             <br>
             <p>As far as general questions and GSoC specifics go, we'd like to have them on our Disqus section just like we mentioned earlier. This would help aggregate the ideas and keep a log of FAQs.</p>
-            <p>Feel free to join the <code><b>#wolfbeacon</b></code> IRC channel on <a href="https://webchat.freenode.net">irc.freenode.net</a> to exchange ideas with members and other potential students. We use Slack internally but our IRC and Slack channels are synced via <a href="https://github.com/bholagabbar/irackbot" target="_blank">irackbot</a> so all communication between is are two-way, realtime and public.
+            <p>Feel free to join the <code><b>#wolfbeacon</b></code> IRC channel on <a href="https://webchat.freenode.net">irc.freenode.net</a> to exchange ideas with members and other potential students. We use Slack internally but our IRC and Slack channels are synced via <a href="https://github.com/bholagabbar/irackbot" target="_blank">irackbot</a> so all communication between them is two-way, realtime and public.
             </p>
             <p>If you have any other suggestions/questions/specific queries, shoot us a mail at <a href="mailto:hello@wolfbeacon.com">hello@wolfbeacon.com</a> and we'll be happy to get in touch.</p>
             <br>
