changed logo reference

--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
     <div class="header__inner">
         <div class="header__logo">
             <a href="index.html" title="WolfBeacon">
-                <img src="img/wp_logo.svg" alt="WolfBeacon">
+                <img src="img/logo_w.png" alt="WolfBeacon">
             </a>
         </div>
         <div class="nav-icon">
