updated meta data

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Home - WolfBeacon</title>
 
-    	<meta name="description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons.
+    	<meta name="description" content="WolfBeacon. The World's first Open Source Cross-Platform Hackathon Aggregation, Organization & Management Software. Built by Hackers, for Hackers.
 ">        <meta name="mpID" content="2206b29843ecafa55c6f6ef90bfb2d85">
 
      <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,18 +17,18 @@
         <link rel="icon" href="img/fav.png" type="image/png" sizes="64x64">
 
         
-<meta name="description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons."/>
+<meta name="description" content="WolfBeacon. The World's first Open Source Cross-Platform Hackathon Aggregation, Organization & Management Software. Built by Hackers, for Hackers."/>
 <meta name="robots" content="noodp"/>
 <link rel="canonical" href="index.html" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="http://www.eonjohn.com/img/fav.png" />
 <meta property="og:title" content="WolfBeacon" />
-<meta property="og:description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons." />
+<meta property="og:description" content="WolfBeacon. The World's first Open Source Cross-Platform Hackathon Aggregation, Organization & Management Software. Built by Hackers, for Hackers." />
 <meta property="og:url" content="http://www.wolfbeacon.com/" />
 <meta property="og:site_name" content="WolfBeacon" />
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:description" content="WolfBeacon is a mobile-first platform to systemize the organization of and participation in hackathons." />
+<meta name="twitter:description" content="WolfBeacon. The World's first Open Source Cross-Platform Hackathon Aggregation, Organization & Management Software. Built by Hackers, for Hackers." />
 <meta name="twitter:title" content="WolfBeacon" />
 <meta name="twitter:site" content="@wolf_beacon" />
 
