--- a/features.html
+++ b/features.html
@@ -41,7 +41,7 @@
     <div class="header__inner">
         <div class="header__logo">
             <a href="index.html" title="WolfBeacon">
-                <img src="img/logo_w.png" alt="WolfBeacon">
+                <img src="img/wp_logo.svg" alt="WolfBeacon">
             </a>
         </div>
         <div class="nav-icon">
@@ -51,7 +51,6 @@
             <li><a class="nav__link is-home-link" href="index.html" title="Home">Home</a></li>
             <li><a class="nav__link is-features-link" href="features.html" title="Features">Features</a></li>
             <li><a class="nav__link is-how-it-works-link" href="how-it-works.html" title="How it works">How it works</a></li>
-            <!-- <li><a class="nav__link is-how-it-works-link" href="projects.html" title="Projects">Projects</a></li> -->
             <li><a class="nav__link is-faq-link" href="https://github.com/WolfBeacon" title="Contribute to our github">Contribute</a></li>
             <li><a class="nav__link is-faq-link " href="login.html"  title="Sign In">Sign In</a></li>
             <li><a class="button -fill -trial-button" href="login.html" b title="Sign Up for FREE">Sign Up for free</a></li>
@@ -389,6 +388,7 @@ gAQ0wOL/ASeOeUpjuCWaAAAAAElFTkSuQmCC" transform="matrix(1.5635 0 0 1.5635 -10.73
                 <li><a class="" href="mailto:hello@wolfbeacon.com?subject=WolfBeacon&body=Use this space to write us a message" title="WolfBeacon">Contact Us</a></li>
             </ul>
             <ul class="footer__nav footer__nav--right">
+                <li><a class="is-privacy-link" href="press.html" title="Press">Press</a></li>
                 <li><a class="is-privacy-link" href="index.html" title="Privacy">Privacy</a></li>
                 <li><a class="is-tandc-link" href="index.html" title="Terms &amp; Conditions">Terms &amp; Conditions</a></li>
             </ul>
@@ -396,22 +396,6 @@ gAQ0wOL/ASeOeUpjuCWaAAAAAElFTkSuQmCC" transform="matrix(1.5635 0 0 1.5635 -10.73
     </div>
 </footer>
 
-<div class="modal  " data-remodal-id="getStarted" data-remodal-options="hashTracking: false">
-          <div class="modal__container">
-            <div id="login-box" class="login-box " style="display: block;position:relative;
- width: 100%; height: 100%;" id="root">
-        <div class="loader loader--style2" title="1">
-            <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40px" height="40px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
-                <path fill="#000" d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z">
-                    <animateTransform attributeType="xml" attributeName="transform" type="rotate" from="0 25 25" to="360 25 25" dur="0.6s" repeatCount="indefinite" />
-                </path>
-            </svg>
-        </div>
-    </div>
-         
-    </div>
-    <div class="modal__close dismiss">close</div>
-</div>
     <script src="http://cdn.auth0.com/js/lock/10.10.1/lock.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type='text/javascript' src='js/main.js'></script>
