--- a/press.html
+++ b/press.html
@@ -79,7 +79,7 @@
 				<div class="general-content__inner">
                     
     				<h1>General Guidelines</h1>
-    				<p>These guidelines outline the general rules when using Facebook's brand assets and showcasing Facebook content. Consistent use of these assets helps people easily recognize references to Facebook and protect company trademarks.
+    				<p>These guidelines outline the general rules when using WolfBeacon's brand assets and showcasing WolfBeacon content. Consistent use of these assets helps people easily recognize references to WolfBeacon and protect company trademarks.
 
 </p>
 	<h2>Do's</h2>
