changed callback url

--- a/login.html
+++ b/login.html
@@ -230,7 +230,7 @@ var male="Male";
 var auth0 = new Auth0({
   domain: 'wolf-beacon.auth0.com',
   clientID: 'ntlIGhtP7K7ccKEyqlOveIgQh18t0cqy',
-  callbackURL: 'http://eonjohn.com/wolfbeacon/login.html',
+  callbackURL: 'http://wolfbeacon.com/login.html',
   responseType: 'token'
 });
 var lock = new Auth0Lock('ntlIGhtP7K7ccKEyqlOveIgQh18t0cqy', 'wolf-beacon.auth0.com', {
