Changed all resources to HTTPS

--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <!--Stylesheet-->
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!--Social Icons-->
-    <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+    <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 </head>
 
 <div id="log" class="form" style="width: 300px;">
@@ -179,7 +179,7 @@
     </div>
 </div>
 
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.13.4/jquery.mask.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.13.4/jquery.mask.min.js'></script>
 <script type="text/javascript">
   $(document).ready(function() {
   $('.do').mask('00/00/0000');
@@ -230,7 +230,7 @@ var male="Male";
 var auth0 = new Auth0({
   domain: 'wolf-beacon.auth0.com',
   clientID: 'ntlIGhtP7K7ccKEyqlOveIgQh18t0cqy',
-  callbackURL: 'http://wolfbeacon.com/login.html',
+  callbackURL: 'https://wolfbeacon.com/login.html',
   responseType: 'token'
 });
 var lock = new Auth0Lock('ntlIGhtP7K7ccKEyqlOveIgQh18t0cqy', 'wolf-beacon.auth0.com', {
