--- a/about-us.html
+++ b/about-us.html
@@ -112,7 +112,7 @@
 	</div>
 </footer>
 
-	<script src="http://cdn.auth0.com/js/lock/10.10.1/lock.min.js"></script>
+	<script src="https://cdn.auth0.com/js/lock/10.10.1/lock.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type='text/javascript' src='js/main.js'></script>
 	</body>
