--- a/features.html
+++ b/features.html
@@ -396,7 +396,7 @@ gAQ0wOL/ASeOeUpjuCWaAAAAAElFTkSuQmCC" transform="matrix(1.5635 0 0 1.5635 -10.73
     </div>
 </footer>
 
-    <script src="http://cdn.auth0.com/js/lock/10.10.1/lock.min.js"></script>
+    <script src="https://cdn.auth0.com/js/lock/10.10.1/lock.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type='text/javascript' src='js/main.js'></script>
 	</body>
