--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <link rel='stylesheet' id='main-styles-css'  href='css/main.css' type='text/css' media='all' />
  <script src="https://cdn.auth0.com/js/lock/10.8/lock.min.js"></script>
-     <script src="http://code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
+     <script src="https://code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
 
 
     </head>
@@ -242,7 +242,7 @@
         
 
 
-<script src="http://cdn.auth0.com/js/lock/10.10.1/lock.min.js"></script>
+<script src="https://cdn.auth0.com/js/lock/10.10.1/lock.min.js"></script>
 
 
     <script type="text/javascript" src="js/app.js"></script>
