--- a/press.html
+++ b/press.html
@@ -142,7 +142,7 @@
     </div>
     <div class="modal__close dismiss">close</div>
 </div>
-	<script src="http://cdn.auth0.com/js/lock/10.10.1/lock.min.js"></script>
+	<script src="https://cdn.auth0.com/js/lock/10.10.1/lock.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type='text/javascript' src='js/main.js'></script>
 	</body>
