Comment out all signUp/signIn links.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <li><a class="nav__link is-features-link" href="features.html" title="Features">Features</a></li>
             <li><a class="nav__link is-how-it-works-link" href="how-it-works.html" title="How it works">How it works</a></li>
             <li><a class="nav__link is-faq-link" href="https://github.com/WolfBeacon" title="Contribute to our github">Contribute</a></li>
-            <li><a class="nav__link is-faq-link " href="login.html"  title="Sign In">Sign In</a></li>
-            <li><a class="button -fill -trial-button" href="login.html" b title="Sign Up for FREE">Sign Up for free</a></li>
+            <li><a class="nav__link is-faq-link " href="mailto:hello@wolfbeacon.com"  title="Contact Us">Contact Us</a></li>
+            <!-- <li><a class="button -fill -trial-button" href="login.html" b title="Sign Up for FREE">Sign Up for free</a></li> -->
         </ul>
         <div class="nav-footer u--mobile">
             <ul class="footer__nav footer__nav--left">
@@ -204,11 +204,12 @@
 	<div class="panel -off-white-background -space-bottom-2">
         <div class="container -medium">
             <div class="text-panel -text-center">
-                <h2 class="-title-hero">Sign Up Today</h2>
-                <p class="-lead">There are tons of terrific hackathons out there people miss or go undone due to a lack of platforms to fill in the gap. So get started now and make your life 100 times easier with WolfBeacon.
-</p>
-                <a class="button -fill -dark-shadow -xlarge  -margin-bottom " href="login.html" data-modal-id="getStarted" title="SignUp Now">Sign Up Now</a>
-                <a style=" border: 2px #37adcb; " class=" button -xlarge  -margin-bottom" href="login.html"  data-modal-id="getStarted"   title="Sign In">Sign In</a>
+                <h2 class="-title-hero">Launching soon!</h2>
+                <p class="-lead">
+                    We're currently in heavy active development and preparing for a big launch in Fall 2018. If you're interested to know more, send us a mail at <a href="mailto:hello@wolfbeacon.com">hello@wolfbeacon.com</a>. Make sure to check out and possibly contribute to the awesome stuff we're building on <a href="https://github.com/wolfbeacon" title="contribute">WolfBeacon</a>.
+                </p>
+                <!-- <a class="button -fill -dark-shadow -xlarge  -margin-bottom " href="login.html" data-modal-id="getStarted" title="SignUp Now">Contribute</a> -->
+                <!-- <a style=" border: 2px #37adcb; " class="button -fill -dark-shadow -xlarge  -margin-bottom" href="login.html"  data-modal-id="getStarted"   title="Sign In">Sign In</a> -->
              </div>
         </div>
     </div>
