Remove more sign up buttons.
Also, removed auth0 cdn links.

--- a/how-it-works.html
+++ b/how-it-works.html
@@ -163,7 +163,7 @@
                     <div class="getting-set-up__content">
                         <h3 class="subtitle">Choose your platform</h3>
                         <p>When you sign up, you'll have two options: The Hacker Platform or The Organizer Platform. Choose the option that best matches your need.</p>
-                        <p> <a class="text-link " href="login.html" title="Sign Up Here">Sign up here.</a></p>
+                        <!-- <p> <a class="text-link " href="login.html" title="Sign Up Here">Sign up here.</a></p> -->
                     </div>
                 </li>
                 <li class="getting-set-up__item">
@@ -199,7 +199,7 @@
                     </div>
                     <div class="getting-set-up__content">
                         <h3 class="subtitle">See for yourself</h3>
-                        <p>The sheer number of awesomeness WolfBeacon can bring to you is best experienced live. <a href="login.html" title="Sign Up" target="blank">Sign up</a> today and see for yourself.</p>
+                        <p>The sheer number of awesomeness WolfBeacon can bring to you is best experienced live.<!--  <a href="login.html" title="Sign Up" target="blank">Sign up</a> today and see for yourself. --></p>
                     </div>
                 </li>
             </ul>
@@ -212,10 +212,12 @@
                 <img class="all-you-need-is-less__item"
                        srcset="img/wb_footer2.png 2x" alt="Got Xero? Get Paypr">
                  <div class="all-you-need-is-less__content">
-                    <h3 class="-title-1">Sign Up Today</h3>
-                    <p class="-lead">There are tons of terrific hackathons out there people miss or go undone due to a lack of platforms to fill in the gap. So get started now and make your life 100 times easier with WolfBeacon.</p>
-                     <a class="button -fill -dark-shadow -xlarge   -margin-bottom" href="login.html" title="SignUp Now">Sign Up Now</a>
-                <a style=" border: 2px #37adcb; " class=" button -xlarge     -margin-bottom" href="login.html"   title="Sign In">Sign In</a>
+                    <!-- <h3 class="-title-1">Sign Up Today</h3> -->
+                    <h3 class="-title-1">Launching soon!</h3>
+                    <!-- <p class="-lead">There are tons of terrific hackathons out there people miss or go undone due to a lack of platforms to fill in the gap. So get started now and make your life 100 times easier with WolfBeacon.</p> -->
+                    <p class="-lead">There are tons of terrific hackathons out there people miss or go undone due to a lack of platforms to fill in the gap. We at Wolfbeacon aim to solve that and make your life 100 times easier.</p>
+                     <!-- <a class="button -fill -dark-shadow -xlarge   -margin-bottom" href="login.html" title="SignUp Now">Sign Up Now</a> -->
+                <!-- <a style=" border: 2px #37adcb; " class=" button -xlarge     -margin-bottom" href="login.html"   title="Sign In">Sign In</a> -->
                 </div>
             </div>
         </div>
