--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <div class="text-panel -text-center">
                 <h2 class="-title-hero">Launching soon!</h2>
                 <p class="-lead">
-                    We're currently in heavy active development and preparing for a big launch in Fall 2018. If you're interested to know more, send us a mail at <a href="mailto:hello@wolfbeacon.com">hello@wolfbeacon.com</a> and be sure to out (and possibly contribute!) to the awesome stuff we're building - <a href="https://github.com/wolfbeacon" title="contribute">https://github.com/wolfbeacon</a>.
+                    We're currently in heavy active development and preparing for a big launch in Fall 2018. If you're interested to know more, send us a mail at <a href="mailto:hello@wolfbeacon.com">hello@wolfbeacon.com</a> and be sure to check out (and possibly contribute!) the awesome stuff we're building - <a href="https://github.com/wolfbeacon" title="contribute">https://github.com/wolfbeacon</a>.
                 </p>
                 <!-- <a class="button -fill -dark-shadow -xlarge  -margin-bottom " href="login.html" data-modal-id="getStarted" title="SignUp Now">Contribute</a> -->
                 <!-- <a style=" border: 2px #37adcb; " class="button -fill -dark-shadow -xlarge  -margin-bottom" href="login.html"  data-modal-id="getStarted"   title="Sign In">Sign In</a> -->
@@ -235,23 +235,11 @@
 		</div>
 	</div>
 </footer>
-
-
-
 </div>
-
-        
-
-
-<script src="https://cdn.auth0.com/js/lock/10.10.1/lock.min.js"></script>
-
-
-    <script type="text/javascript" src="js/app.js"></script>
-         <script src="https://cdn.auth0.com/js/lock-passwordless-1.0.min.js"></script>
-
+<!-- <script src="https://cdn.auth0.com/js/lock/10.10.1/lock.min.js"></script> -->
+<script type="text/javascript" src="js/app.js"></script>
+<!-- <script src="https://cdn.auth0.com/js/lock-passwordless-1.0.min.js"></script> -->
 <script type="text/javascript" src="js/main.js"></script>
-
-
-  	</body>
- </html>
+</body>
+</html>
  
