--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="container -medium">
             <div class="text-panel -text-center">
                 <h2 class="-title-1 home-hero-title"> <span style="text-align: center;" class="hero-title-2">Hackathon Organization & Aggregation</span></h2>
-                <p>WolfBeacon is the world's first ever hackathon organization and aggregation platform. Built collaboratively by university students, from all seven continents, WolfBeacon streamlines the process of searching for hackathons and serves as an all-in-one package when it comes to building your own hackathons.</p>
+                <p>WolfBeacon is the world's first ever free open source hackathon organization and aggregation platform. Built collaboratively by university students, from all seven continents, WolfBeacon streamlines the process of searching for hackathons and serves as an all-in-one package when it comes to building your own hackathons.</p>
                 <a class="button -fill -large -dark-shadow -margin-bottom" href="how-it-works.html" title="How it works">How it works</a>
             </div>
         </div>
