--- a/how-it-works.html
+++ b/how-it-works.html
@@ -215,7 +215,7 @@
                     <!-- <h3 class="-title-1">Sign Up Today</h3> -->
                     <h3 class="-title-1">Launching soon!</h3>
                     <!-- <p class="-lead">There are tons of terrific hackathons out there people miss or go undone due to a lack of platforms to fill in the gap. So get started now and make your life 100 times easier with WolfBeacon.</p> -->
-                    <p class="-lead">There are tons of terrific hackathons out there people miss or go undone due to a lack of platforms to fill in the gap. We at Wolfbeacon aim to solve that and make your life 100 times easier.</p>
+                    <p class="-lead">WolfBeacon is the world's first ever hackathon organization and aggregation platform. Built collaboratively by university students, from all seven continents with one purpose of growing the Hackathon Community!</p>
                      <!-- <a class="button -fill -dark-shadow -xlarge   -margin-bottom" href="login.html" title="SignUp Now">Sign Up Now</a> -->
                 <!-- <a style=" border: 2px #37adcb; " class=" button -xlarge     -margin-bottom" href="login.html"   title="Sign In">Sign In</a> -->
                 </div>
