--- a/gsoc-18.html
+++ b/gsoc-18.html
@@ -119,22 +119,23 @@
                                 <a class="icon-fb" href="https://twitter.com/wolf_beacon?lang=en" target="_blank"></a>
                             </li>
                             <li>
-                                <a class="icon-email" href="mailto:?subject=WolfBeacon&body=Use this space to write us a message" title="WolfBeacon"></a>
+                                <a class="icon-email" href="mailto:hello@wolfbeacon.org" title="WolfBeacon"></a>
                             </li>
                         </ul>
                     </div>
                 </div>
+            </div>
         </header>
         <br>
         <div class="panel   -space-top-1 -space-bottom-1 getting-set-up-panel">
             <div class="container -medium gsoc gsoc-heading">
                 <h1 style="text-align: center; color: #2d2d2d; margin-bottom: 0" class="-title-1">GSoC 2018 @ WolfBeacon</h1>
                 <hr>
-            </di
+            </div>
         </div>
         <div class="container gsoc">
             <br>
-            <h5 id="attemp"> &#8227; WolfBeacon will be applying for Google Summer of Code 2018 as a participating organization!</h2>
+            <h5 id="attemp"> &#8227; WolfBeacon will be applying for Google Summer of Code 2018 as a participating organization!</h5>
         	<br><br>
             <h2 id="whatexactlyisgsoc"><u>About GSoC</u></h2>
             <br>
@@ -245,12 +246,10 @@
             <br>
             <h2 id="contact"><u>Contact</u></h2>
             <br>
-            <p>Head over to <a href="https://wolfbeacon.org/chat">https://wolfbeacon.org/chat</a> and join the Slack Channel or the <i>#wolfbeacon </i> freenode IRC channel </li>.
+            <p>Head over to <a href="https://wolfbeacon.org/chat">https://wolfbeacon.org/chat</a> and join the Slack Channel or the <i>#wolfbeacon </i> freenode IRC channel </i>.
             </p>
             <p>If you have any other suggestions/questions/specific queries, put a comment down below in the Disqus section or shoot us a mail at <a href="mailto:hello@wolfbeacon.org">hello@wolfbeacon.org</a>.
             </p>
-            <br>
-            <br>
             <br>
             <div id="disqus_thread"></div>
             <br>
@@ -271,7 +270,7 @@
                         <li>
                             <a class="icon-fb" href="https://twitter.com/wolf_beacon?lang=en" target="_blank"></a>
                         </li>
-                        <li><a class="" href="mailto:hello@wolfbeacon.org?subject=WolfBeacon&body=Use this space to write us a message" title="WolfBeacon">Contact Us</a></li>
+                        <li><a class="" href="mailto:hello@wolfbeacon.org" title="WolfBeacon">Contact Us</a></li>
                     </ul>
                     <ul class="footer__nav footer__nav--right">
                         <li><a class="is-privacy-link" href="index.html" title="Privacy">Privacy</a></li>
@@ -319,6 +318,7 @@
         })();
         </script>
         <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
 </body>
 
 </html>
