--- a/gsoc-18.html
+++ b/gsoc-18.html
@@ -208,10 +208,10 @@
             <p>The basic process would be:</p>
             <div class="container">
                 <ol>
-                    <li>1. Head over to <a href="https://wolfbeacon.org/chat">https://wolfbeacon.org/chat</a> and join the Slack Channel or the <i>#wolfbeacon </i> freenode IRC channel </li>.
+                    <li>1. Head over to <a href="https://wolfbeacon.org/chat">https://wolfbeacon.org/chat</a> and join the Slack Channel or the <i>#wolfbeacon </i> freenode IRC channel.</li>
                     <li>2. Introduce yourself, discuss ideas with mentors, community members and other folks.</li>
                     <li>3. Start formalising the requirements, get specific and spec out a great proposal on <a href="https://docs.google.com/document/u/0/?usp=mkt_docs" target="_blank">Google Docs</a>.</li>
-                    <li>4. Get feedback from metors on the proposal.</li>
+                    <li>4. Get feedback from mentors on the proposal.</li>
                 </ol>
             </div>
             <br>
