--- a/gsoc-18.html
+++ b/gsoc-18.html
@@ -238,6 +238,22 @@
             <p><em>Skillset</em>: Experience with atleast 2 of Python, Java and Swift. Experience with <a href="https://www.djangoproject.com/" target="_blank">Django</a> and <a href="http://www.django-rest-framework.org/" target="_blank">Django Rest Framework</a> is a definite plus. Experience with mobile development is almost certainly required. Should possess atleast an elementary understanding of microservices architecture and <a href="https://www.docker.com/">Docker</a>.</p>
             <p><b>Mentors:</b> <a href="https://github.com/bholagabbar" target="_blank">Shreyans Sheth</a>, <a href="https://github.com/maclyn" target="_blank">Maclyn Brandwein</a></p>
             <br>
+            <h3 id="3wolfbeaconbackendproject">3. HowlPlay</h3>
+            <p>HowlPlay will allow hackathon organizers to have a <a href="http://timeplay.com/">TimePlay</a>-like experience for hackers.</p>
+            <p>It is a crowd-based game played with hundreds of people in one room connected to the same WiFi. The system will be powered by the WolfBeacon back-end.</p>
+            <p></p>
+            <p><em>Skillset</em>: Experience with <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API">WebSocket</a> and <a href="https://nodejs.org/en/">Node.js</a> are required. You should also be comfortable developing scalable applications.</p>
+            <p>
+            <br>
+            </p>
+            
+            <h3 id="4wolfbeaconbackendproject">4. Deployment Automation Project</h3>
+            <p>WolfBeacon's backend is powered by <a href="https://aws.amazon.com/">Amazon Web Services</a>.</p>
+            <p>For this project, you will be developing a complete deployment pipeline for WolfBeacon. You will be working with AWS Elastic Beanstalk, AWS ECR, AWS S3, and AWS CodeBuild</p>.
+            <p>
+            <br>
+            </p>
+            
             <br>
             <hr>
             <br>
