--- a/gsoc-18.html
+++ b/gsoc-18.html
@@ -241,6 +241,7 @@
             <h3 id="3wolfbeaconbackendproject">3. HowlPlay</h3>
             <p>HowlPlay will allow hackathon organizers to have a <a href="http://timeplay.com/">TimePlay</a>-like experience for hackers.</p>
             <p>It is a crowd-based game played with hundreds of people in one room connected to the same WiFi. The system will be powered by the WolfBeacon back-end.</p>
+            <p>You will be working with WebSocket, and many other WebRTC technologies. The goal is to have a system that is easy to deploy for hackathon organizers, also robust enough to handle hundreds of simultaneous connections.</p>
             <p></p>
             <p><em>Skillset</em>: Experience with <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API">WebSocket</a> and <a href="https://nodejs.org/en/">Node.js</a> are required. You should also be comfortable developing scalable applications.</p>
             <p>
