--- a/gsoc-18.html
+++ b/gsoc-18.html
@@ -239,9 +239,9 @@
             <p><b>Mentors:</b> <a href="https://github.com/bholagabbar" target="_blank">Shreyans Sheth</a>, <a href="https://github.com/maclyn" target="_blank">Maclyn Brandwein</a></p>
             <br>
             <h3 id="3wolfbeaconbackendproject">3. HowlPlay</h3>
-            <p>HowlPlay will allow hackathon organizers to have a <a href="http://timeplay.com/">TimePlay</a>-like experience for hackers.</p>
-            <p>It is a crowd-based game played with hundreds of people in one room connected to the same WiFi. The system will be powered by the WolfBeacon back-end.</p>
+            <p>HowlPlay will allow hackathon organizers to have a <a href="http://timeplay.com/">TimePlay</a>-like experience for hackers. Basically, organizers will be able to have a quiz for hackers to answer, hackers will answer the quiz on their phone, score will be displayed on organizer's dashboard in real-time.</p>
             <p>You will be working with WebSocket, and many other WebRTC technologies. The goal is to have a system that is easy to deploy for hackathon organizers, also robust enough to handle hundreds of simultaneous connections.</p>
+            <p>The application architecture is fully specified on our Confluence site, <a href="https://wolfbeacon.atlassian.net/wiki/spaces/WG/pages/299171906/Software+Architecture+Documentation">check it out</a>!</p>
             <p></p>
             <p><em>Skillset</em>: Experience with <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API">WebSocket</a> and <a href="https://nodejs.org/en/">Node.js</a> are required. You should also be comfortable developing scalable applications.</p>
             <p>
