--- a/gsoc-18.html
+++ b/gsoc-18.html
@@ -250,7 +250,10 @@
             
             <h3 id="4wolfbeaconbackendproject">4. Deployment Automation Project</h3>
             <p>WolfBeacon's backend is powered by <a href="https://aws.amazon.com/">Amazon Web Services</a>.</p>
-            <p>For this project, you will be developing a complete deployment pipeline for WolfBeacon. You will be working with AWS Elastic Beanstalk, AWS ECR, AWS S3, and AWS CodeBuild</p>.
+            <p>The goal is to have an automated deployment process for our projects, we currently have a <a href="https://github.com/wolfbeacon/wolfbeacon-infra-ops">bot</a> that does some automation for us.</p>
+            <p>You will be helping to develop a complete deployment automation pipeline for WolfBeacon. You will be working with Ansible, AWS Elastic Beanstalk, AWS ECR, AWS S3, and AWS CodeBuild. We are currently seeking to implement a solution that automates secret file generation, currently all secrets are manually typed into AWS console, which is very inefficient.</p>
+            <p></p>
+            <p><em>Skillset</em>Experience with <a href="https://aws.amazon.com/">Amazon Web Services</a> and <a href="https://golang.org/">Golang</a>. Also some experience with developing applications that involve using encryption algorithms is preferred.</p>
             <p>
             <br>
             </p>
