--- a/gsoc-18.html
+++ b/gsoc-18.html
@@ -238,6 +238,7 @@
             <p><em>Skillset</em>: Experience with atleast 2 of Python, Java and Swift. Experience with <a href="https://www.djangoproject.com/" target="_blank">Django</a> and <a href="http://www.django-rest-framework.org/" target="_blank">Django Rest Framework</a> is a definite plus. Experience with mobile development is almost certainly required. Should possess atleast an elementary understanding of microservices architecture and <a href="https://www.docker.com/">Docker</a>.</p>
             <p><b>Mentors:</b> <a href="https://github.com/bholagabbar" target="_blank">Shreyans Sheth</a>, <a href="https://github.com/maclyn" target="_blank">Maclyn Brandwein</a></p>
             <br>
+            
             <h3 id="3wolfbeaconbackendproject">3. HowlPlay</h3>
             <p>HowlPlay will allow hackathon organizers to have a <a href="http://timeplay.com/">TimePlay</a>-like experience for hackers. Basically, organizers will be able to have a quiz for hackers to answer, hackers will answer the quiz on their phone, score will be displayed on organizer's dashboard in real-time.</p>
             <p>You will be working with WebSocket, and many other WebRTC technologies. The goal is to have a system that is easy to deploy for hackathon organizers, also robust enough to handle hundreds of simultaneous connections.</p>
@@ -253,7 +254,7 @@
             <p>The goal is to have an automated deployment process for our projects, we currently have a <a href="https://github.com/wolfbeacon/wolfbeacon-infra-ops">bot</a> that does some automation for us.</p>
             <p>You will be helping to develop a complete deployment automation pipeline for WolfBeacon. You will be working with Ansible, AWS Elastic Beanstalk, AWS ECR, AWS S3, and AWS CodeBuild. We are currently seeking to implement a solution that automates secret file generation, currently all secrets are manually typed into AWS console, which is very inefficient.</p>
             <p></p>
-            <p><em>Skillset</em>Experience with <a href="https://aws.amazon.com/">Amazon Web Services</a> and <a href="https://golang.org/">Golang</a>. Also some experience with developing applications that involve using encryption algorithms is preferred.</p>
+            <p><em>Skillset</em>: Experience with <a href="https://aws.amazon.com/">Amazon Web Services</a> and <a href="https://golang.org/">Golang</a>. Also some experience with developing applications that involve using encryption algorithms is preferred.</p>
             <p>
             <br>
             </p>
