--- a/gsoc-18.html
+++ b/gsoc-18.html
@@ -226,7 +226,7 @@
             <p>WolfBeacon's Analytics Dashboard will allow Hackathon Organizers to reach deeper into the interactions and reviews of workshops/ events and the Hackathon itself. With a modern and clean UI paired with UX design strategies, the Dashboard will revolutionize the way Hackathons are organized and how feedback is responded to within the coming years. </p>
             <p>We're looking for talented and passionate Front-end developers who will take a mock-up into a fully functioning application with their development skills.</p>
             <p><em>Skillset</em>: HTML/CSS/JavaScript is implicit. Experience with <a href="https://reactjs.org/">React</a> is mandatory. While you will be working in conjection with our designer, you are expected to have good UI/UX skills and the ability to come up with wireframes and prototypes while turning them into code.  Profile and work on GitHub, <a href="https://www.behance.net/">Behance</a>, <a href="https://codepen.io">Codepen</a> and <a href="https://dribbble.com/">Dribbble </a> is added credibility. Some basic understanding of Analytics/Data Science/Machine Learning (through completion of an MOOC, for example) is a plus. </p> 
-            <p><b>Mentors:</b> <a href="https://github.com/avikantz">Avikant</a> &amp; <a href="https://github.com/shaynair">Akshay</a></p>
+            <p><b>Mentors:</b> <a href="https://github.com/avikantz">Avikant</a>, <a href="https://github.com/shaynair">Akshay</a></p>
             <p>
             <br>
             </p>
@@ -245,6 +245,7 @@
             <p>The application architecture is fully specified on our Confluence site, <a href="https://wolfbeacon.atlassian.net/wiki/spaces/WG/pages/299171906/Software+Architecture+Documentation">check it out</a>!</p>
             <p></p>
             <p><em>Skillset</em>: Experience with <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API">WebSocket</a> and <a href="https://nodejs.org/en/">Node.js</a> are required. You should also be comfortable developing scalable applications.</p>
+            <p><b>Mentors:</b> <a href="https://github.com/digi0ps" target="_blank">Sriram</a>, <a href="https://github.com/shaynair">Akshay</a></p>
             <p>
             <br>
             </p>
@@ -255,6 +256,7 @@
             <p>You will be helping to develop a complete deployment automation pipeline for WolfBeacon. You will be working with Ansible, AWS Elastic Beanstalk, AWS ECR, AWS S3, and AWS CodeBuild. We are currently seeking to implement a solution that automates secret file generation, currently all secrets are manually typed into AWS console, which is very inefficient.</p>
             <p></p>
             <p><em>Skillset</em>: Experience with <a href="https://aws.amazon.com/">Amazon Web Services</a> and <a href="https://golang.org/">Golang</a>. Also some experience with developing applications that involve using encryption algorithms is preferred.</p>
+            <p><b>Mentors:</b> <a href="https://github.com/bholagabbar" target="_blank">Shreyans Sheth</a>, <a href="https://github.com/ralph-dev">Ralph</a></p>
             <p>
             <br>
             </p>
